--- a/templates/nomad_common.json.j2
+++ b/templates/nomad_common.json.j2
@@ -1,2 +1,3 @@
 data_dir = "{{ nomad_default_config_data_dir }}"
 bind_addr = "{{ nomad_default_config_bind_addr }}"
+datacenter = "{{ nomad_default_config_datacenter }}"
