Add a role variable to set consul.address of Nomad.

--- a/templates/nomad_common.json.j2
+++ b/templates/nomad_common.json.j2
@@ -9,3 +9,8 @@ advertise {
   serf = "{{ nomad_default_config_advertise }}"
 }
 {% endif %}
+{% if nomad_default_config_consul_address is defined %}
+consul {
+  address = "{{ nomad_default_config_consul_address }}"
+}
+{% endif %}
