Add a role variable to set server.bootstrap_expect of Nomad.

--- a/templates/nomad_common.json.j2
+++ b/templates/nomad_common.json.j2
@@ -14,3 +14,8 @@ consul {
   address = "{{ nomad_default_config_consul_address }}"
 }
 {% endif %}
+{% if nomad_default_config_server_bootstrap_expect is defined %}
+server {
+  bootstrap_expect = {{ nomad_default_config_server_bootstrap_expect }}
+}
+{% endif %}
